[project]
name = "planning-struct-analysis"
version = "0.1.0"
description = "Analysis of structures in planning problems"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.3",
    "sympy>=1.14.0",
    "unified-planning>=1.3.0",
]

[project.scripts]
psa_tool = "planning_struct_analysis:main.main"